# Trace

./: .cursorignore  .env.agent.example  .gitignore  AGENTS.md  CHECKLIST.md  IMPLEMENTATION.md  PLAN.md  SETUP.md  repomix.config.json
.cursor/: mcp.json
.cursor/rules/: 000-project-overview.mdc  001-partner-mindset.mdc  100-agent-backend.mdc  200-plane-frontend.mdc  300-agent-webhooks.mdc  400-n8n-workflows.mdc  500-database.mdc
.cursor/skills/plane-api/: SKILL.md
.cursor/skills/plane-api/general/scripts/: plane
.cursor/skills/plane-api/projects/: SKILL.md
.cursor/skills/plane-api/projects/references/: create-a-project.md
.cursor/skills/plane-api/work-item/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: __init__.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: blocker.py  context.py  health.py  memory.py  participant.py  plane.py
backend/app/core/: auth.py  config.py
backend/app/model/: api.py  blocker.py  memory.py  participant.py  plane.py  standup.py
backend/app/service/: blocker_store.py  gemini_client.py  github_client.py  memory_store.py  participant_store.py  plane_client.py  standup_context.py
backend/migrations/: 001_initial.sql
backend/tests/: conftest.py  test_auth.py  test_blockers.py  test_context.py  test_health.py  test_memory.py  test_participants.py  test_plane.py
n8n_workflows/: daily-standup.json  sprint-planning.json  standup-pre-fetch-optimized.json  standup-pre-fetch.json  user-story-gen.json
(+1 files in other folders)
