[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Agentic Scrum Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "google-genai>=1.53.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-slugify>=8.0.4",
    "supabase>=2.24.0",
    "tenacity>=9.1.2",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.13",
]
